Possible permanent fix for the collapsing margin issue

--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -6,7 +6,7 @@
     .content {
         background-color: #D9EBDC;
         height: 100%;
-        padding: 10px 0;
+        overflow: hidden;
 
         // This will be our normal page with information
         article {
